Reenabling integration testing for CI